<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/default_content_bg"
	android:layoutAnimation="@anim/about_layout_anim"
	android:background="@drawable/default_content_bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	
    <ImageView
        android:id="@+id/about_logo"
        android:contentDescription="@string/default_iv_description"
        android:src="@drawable/logo"
        android:scaleType="centerInside"
        android:padding="@dimen/about_logo_padding"
	    android:layout_width="@dimen/about_logo_width"
	    android:layout_height="@dimen/about_logo_height"/>
    
    <LinearLayout 
        android:id="@+id/about_title"
        android:orientation="vertical"
        android:paddingLeft="@dimen/about_title_padding"
        android:paddingRight="@dimen/about_title_padding"
        android:paddingBottom="@dimen/about_title_padding"
		android:layout_toRightOf="@id/about_logo"
		android:layout_alignTop="@id/about_logo"
		android:layout_alignBottom="@id/about_logo"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<TextView 
	        android:text="@string/sign"
	     	style="@style/AboutAppName"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
		
		<TextView 
	        android:text="@string/slogan"
	     	style="@style/AboutSlogan"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
				
		<TextView
            android:id="@+id/about_app_ver_name"
	        android:text="@string/verName"
	     	style="@style/AboutVerName"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
		
	</LinearLayout>
    
	<View
        android:id="@+id/about_title_separator"
        android:background="@drawable/list_divider"
        android:layout_below="@id/about_title"
        android:layout_width="fill_parent"
        android:layout_height="2px" />
	
    <LinearLayout 
        android:id="@+id/about_footer"
        android:orientation="vertical"
        android:padding="@dimen/about_footer_padding"
		android:layout_alignParentBottom="true"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<TextView 
	        android:text="@string/studio_name"
	     	style="@style/AboutStudioName"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
		
	</LinearLayout>
	
    <fragment
        android:id="@+id/about_promote_apps"
        android:name="com.dailystudio.memory.fragment.PromoteAppsFragment" 
        android:layout_below="@id/about_title_separator"
        android:layout_above="@id/about_footer"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"/>
    		
</RelativeLayout>